# ImageClusterViz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cluster_images.py  dimensionality_reduction.py  example_complete_workflow.py  example_duplicate_detection.py  example_usage.py  feature_extraction.py  pyproject.toml  requirements.txt  test_batch_processing.py  test_core_api.py  test_features_pipeline.py  test_reduction_module.py  test_visualization.py  utils.py
clustering/: __init__.py  adapter.py  base.py  factory.py  kmeans.py
core/: clusterer.py  results.py
docs/: index.html
examples/: example_apis.ipynb  example_complete_workflow.py  example_duplicate_detection.py
feature_extractors/: __init__.py  base.py  demo.py  dinov2.py  factory.py  mobilenet.py  resnet.py  swin.py  vit.py
features/: __init__.py  batch.py  cache.py  metadata.py  pipeline.py
imageatlas/: __init__.py
imageatlas/clustering/: __init__.py  base.py  factory.py  gmm.py  hdbscan_clustering.py  kmeans.py
imageatlas/core/: __init__.py  clusterer.py  results.py
imageatlas/duplicates/: __init__.py  base.py  cache.py  detector.py  results.py  visualization.py
imageatlas/duplicates/adapters/: __init__.py  feature_extractor_adapter.py
imageatlas/duplicates/grouping/: __init__.py  group_builder.py  threshold_selector.py
imageatlas/duplicates/selection/: __init__.py  best_selector.py
imageatlas/duplicates/strategies/: __init__.py  clip_strategy.py  embedding_strategy.py  hash_strategy.py
imageatlas/duplicates/utils/: __init__.py  hash_utils.py  progress.py  similarity_utils.py  validation.py
imageatlas/features/: __init__.py  batch.py  cache.py  loaders.py  metadata.py  pipeline.py
imageatlas/features/extractors/: __init__.py  base.py  clip.py  convnext.py  efficientnet.py  vgg.py
imageatlas/reduction/: __init__.py  pca.py  tsne.py  umap_reducer.py
imageatlas/visualization/: __init__.py
imageclusterviz/: __init__.py  _cluster.py  _embed.py  _vis.py  feature_extraction.py  legacy_script.py  utils.py
reduction/: __init__.py  base.py  factory.py  tsne.py
tests/: test_core_api.py  test_embed_cluster.py
visualization/: grids.py
