[build-system]
requires =  ["setuptools>=68", "wheel"]

[project]
name = "imageclusterviz"
version = "0.1.0"
description = "Lightweight image embedding and clustering"
authors = [{name = "Ahmad Javed",  email = "ahmadjaved97@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.23",
    "pillow>=10.0",
    "rich>=13.0",
    "opencv-python>=4.9",
    "scikit-learn>=1.4",
    ]

[project.scripts]              # will give users a `imageviz` CLI later
imageviz = "imageclusterviz.legacy_script:main"


[tool.setuptools]
packages = ["imageclusterviz"]